--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "qdapp-template",
+  "name": "qubic-portal",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "Decentralized exchange on Qubic network - Trade tokens instantly with the best rates",
   "type": "module",
   "scripts": {
     "dev": "vite",
