--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,3 @@
-VITE_RPC_URL=https://testrpc.qubicbay.io
-VITE_EVENT_URL=https://testrpc.qubicbay.io
+VITE_RPC_URL=https://rpc.qubic.org
+VITE_EVENT_URL=https://dev01.qubic.org
 VITE_EXPLORER_URL=https://explorer.qubic.org
-VITE_APP_NAME=YETI
