refactor: token metadata standardization and implement dynamic pool token list fetching

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 VITE_RPC_URL=https://rpc.qubic.org
 VITE_EVENT_URL=https://dev01.qubic.org
 VITE_EXPLORER_URL=https://explorer.qubic.org
+VITE_LOGO_BASE_URL=
